--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BaseClasses\BaseContainer.cs" />
-    <Compile Include="BaseClasses\Sprites\BaseSprite.cs" />
+    <Compile Include="BaseClasses\Graphics\BaseSprite.cs" />
     <Compile Include="BaseClasses\Objects\BaseCollidableObject.cs" />
     <Compile Include="BaseClasses\Objects\BasePhysicalObject.cs" />
     <Compile Include="BaseClasses\Objects\BaseGameObject.cs" />
@@ -99,32 +99,32 @@
     <Compile Include="BlockObjects\QuestionStates\Normal.cs" />
     <Compile Include="BlockObjects\QuestionStates\Used.cs" />
     <Compile Include="BlockObjects\Stair.cs" />
-    <Compile Include="BaseClasses\BaseCommand.cs" />
-    <Compile Include="Commands\Action.cs" />
-    <Compile Include="Commands\FireCreate.cs" />
-    <Compile Include="Commands\Mute.cs" />
-    <Compile Include="Commands\NormalCreate.cs" />
-    <Compile Include="Commands\Resume.cs" />
-    <Compile Include="Commands\Quit.cs" />
-    <Compile Include="Commands\Reset.cs" />
-    <Compile Include="Commands\RightPress.cs" />
-    <Compile Include="Commands\LeftPress.cs" />
-    <Compile Include="Commands\CrouchPress.cs" />
-    <Compile Include="Commands\JumpPress.cs" />
-    <Compile Include="Commands\CrouchRelease.cs" />
-    <Compile Include="Commands\JumpRelease.cs" />
-    <Compile Include="Commands\Crouch.cs" />
-    <Compile Include="Commands\RightRelease.cs" />
-    <Compile Include="Commands\LeftRelease.cs" />
-    <Compile Include="Commands\Jump.cs" />
-    <Compile Include="Commands\Left.cs" />
-    <Compile Include="Commands\Pause.cs" />
-    <Compile Include="Commands\Right.cs" />
-    <Compile Include="BaseClasses\BaseController.cs" />
-    <Compile Include="Commands\SuperCreate.cs" />
-    <Compile Include="Commands\ToggleFullScreen.cs" />
+    <Compile Include="BaseClasses\Controls\BaseCommand.cs" />
+    <Compile Include="Controls\Commands\Action.cs" />
+    <Compile Include="Controls\Commands\FireCreate.cs" />
+    <Compile Include="Controls\Commands\Mute.cs" />
+    <Compile Include="Controls\Commands\NormalCreate.cs" />
+    <Compile Include="Controls\Commands\Resume.cs" />
+    <Compile Include="Controls\Commands\Quit.cs" />
+    <Compile Include="Controls\Commands\Reset.cs" />
+    <Compile Include="Controls\Commands\RightPress.cs" />
+    <Compile Include="Controls\Commands\LeftPress.cs" />
+    <Compile Include="Controls\Commands\CrouchPress.cs" />
+    <Compile Include="Controls\Commands\JumpPress.cs" />
+    <Compile Include="Controls\Commands\CrouchRelease.cs" />
+    <Compile Include="Controls\Commands\JumpRelease.cs" />
+    <Compile Include="Controls\Commands\Crouch.cs" />
+    <Compile Include="Controls\Commands\RightRelease.cs" />
+    <Compile Include="Controls\Commands\LeftRelease.cs" />
+    <Compile Include="Controls\Commands\Jump.cs" />
+    <Compile Include="Controls\Commands\Left.cs" />
+    <Compile Include="Controls\Commands\Pause.cs" />
+    <Compile Include="Controls\Commands\Right.cs" />
+    <Compile Include="BaseClasses\Controls\BaseController.cs" />
+    <Compile Include="Controls\Commands\SuperCreate.cs" />
+    <Compile Include="Controls\Commands\ToggleFullScreen.cs" />
     <Compile Include="Containers\Session.cs" />
-    <Compile Include="Controllers\KeyboardController.cs" />
+    <Compile Include="Controls\Controllers\KeyboardController.cs" />
     <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
     <Compile Include="EnemyObjects\Piranha.cs" />
     <Compile Include="EnemyObjects\PiranhaStates\Defeated.cs" />
@@ -134,8 +134,8 @@
     <Compile Include="EnemyObjects\PiranhaStates\Show.cs" />
     <Compile Include="Factories\GameObjectFactory.cs" />
     <Compile Include="Factories\CommandFactory.cs" />
-    <Compile Include="Commands\InfiniteMode.cs" />
-    <Compile Include="Commands\NormalMode.cs" />
+    <Compile Include="Controls\Commands\InfiniteMode.cs" />
+    <Compile Include="Controls\Commands\NormalMode.cs" />
     <Compile Include="Factories\SoundFactory.cs" />
     <Compile Include="Factories\SpriteFactory.cs" />
     <Compile Include="EnemyObjects\Goomba.cs" />
@@ -148,7 +148,7 @@
     <Compile Include="LevelGen\InfiniteGenerator.cs" />
     <Compile Include="LevelGen\PerlinNoiseGenerator.cs" />
     <Compile Include="MiscObjects\Camera.cs" />
-    <Compile Include="Scripts\StartScript.cs" />
+    <Compile Include="Controls\Scripts\StartScript.cs" />
     <Compile Include="Theming\Player.cs" />
     <Compile Include="UIObjects\GameWon.cs" />
     <Compile Include="UIObjects\GameStart.cs" />
@@ -200,8 +200,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Scripts\TransistScript.cs" />
-    <Compile Include="Scripts\PausedScript.cs" />
+    <Compile Include="Controls\Scripts\TransistScript.cs" />
+    <Compile Include="Controls\Scripts\PausedScript.cs" />
     <Compile Include="LevelGen\EncapsulatedObject.cs" />
     <Compile Include="LevelGen\GameConverter.cs" />
     <Compile Include="LevelGen\LevelIOJson.cs" />
@@ -211,32 +211,32 @@
     <Compile Include="MarioObjects\ProtectionStates\Dead.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Fire.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Standard.cs" />
-    <Compile Include="BaseClasses\Sprites\BaseTextureSprite.cs" />
+    <Compile Include="BaseClasses\Graphics\BaseTextureSprite.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Normal.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Protected.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Starred.cs" />
     <Compile Include="Sounds\SoundController.cs" />
     <Compile Include="UIObjects\PopingUpPoints.cs" />
-    <Compile Include="Sprites\SplashSprite.cs" />
-    <Compile Include="Sprites\TextSprite.cs" />
-    <Compile Include="Sprites\FlashingAnimatedSprite.cs" />
-    <Compile Include="Sprites\FlickingAnimatedSprite.cs" />
-    <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
+    <Compile Include="Graphics\Sprites\SplashSprite.cs" />
+    <Compile Include="Graphics\Sprites\TextSprite.cs" />
+    <Compile Include="Graphics\Sprites\FlashingAnimatedSprite.cs" />
+    <Compile Include="Graphics\Sprites\FlickingAnimatedSprite.cs" />
+    <Compile Include="Graphics\Sprites\BrickPieceSprite.cs" />
     <Compile Include="MarioObjects\Mario.cs" />
     <Compile Include="MarioObjects\MovementStates\Crouching.cs" />
     <Compile Include="MarioObjects\MovementStates\Standing.cs" />
     <Compile Include="MarioObjects\MovementStates\Jumping.cs" />
     <Compile Include="MarioObjects\MovementStates\Walking.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Super.cs" />
-    <Compile Include="Sprites\AnimatedSprite.cs" />
-    <Compile Include="Sprites\StaticSprite.cs" />
+    <Compile Include="Graphics\Sprites\AnimatedSprite.cs" />
+    <Compile Include="Graphics\Sprites\StaticSprite.cs" />
     <Compile Include="Theming\Const.cs" />
     <Compile Include="Theming\Database.cs" />
     <Compile Include="Theming\Model.cs" />
     <Compile Include="Containers\World.cs" />
-    <Compile Include="Scripts\PlayingScript.cs" />
+    <Compile Include="Controls\Scripts\PlayingScript.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
-    <Compile Include="Controllers\GamePadController.cs" />
+    <Compile Include="Controls\Controllers\GamePadController.cs" />
     <Compile Include="Interfaces\IController.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
