Move files to Objects dir.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -84,21 +84,21 @@
     <Compile Include="BaseClasses\Objects\BaseUIObject.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseTimedState.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseState.cs" />
-    <Compile Include="BlockObjects\Brick.cs" />
-    <Compile Include="BlockObjects\BrickStates\Bumped.cs" />
-    <Compile Include="BlockObjects\BrickStates\Destroyed.cs" />
-    <Compile Include="BlockObjects\BrickStates\Hidden.cs" />
-    <Compile Include="BlockObjects\BrickStates\Normal.cs" />
-    <Compile Include="BlockObjects\BrickStates\Used.cs" />
-    <Compile Include="BlockObjects\Flag.cs" />
-    <Compile Include="BlockObjects\Floor.cs" />
-    <Compile Include="BlockObjects\Pipeline.cs" />
-    <Compile Include="BlockObjects\Question.cs" />
-    <Compile Include="BlockObjects\QuestionStates\Bumped.cs" />
-    <Compile Include="BlockObjects\QuestionStates\Hidden.cs" />
-    <Compile Include="BlockObjects\QuestionStates\Normal.cs" />
-    <Compile Include="BlockObjects\QuestionStates\Used.cs" />
-    <Compile Include="BlockObjects\Stair.cs" />
+    <Compile Include="Objects\Blocks\Brick.cs" />
+    <Compile Include="Objects\Blocks\BrickStates\Bumped.cs" />
+    <Compile Include="Objects\Blocks\BrickStates\Destroyed.cs" />
+    <Compile Include="Objects\Blocks\BrickStates\Hidden.cs" />
+    <Compile Include="Objects\Blocks\BrickStates\Normal.cs" />
+    <Compile Include="Objects\Blocks\BrickStates\Used.cs" />
+    <Compile Include="Objects\Blocks\Flag.cs" />
+    <Compile Include="Objects\Blocks\Floor.cs" />
+    <Compile Include="Objects\Blocks\Pipeline.cs" />
+    <Compile Include="Objects\Blocks\Question.cs" />
+    <Compile Include="Objects\Blocks\QuestionStates\Bumped.cs" />
+    <Compile Include="Objects\Blocks\QuestionStates\Hidden.cs" />
+    <Compile Include="Objects\Blocks\QuestionStates\Normal.cs" />
+    <Compile Include="Objects\Blocks\QuestionStates\Used.cs" />
+    <Compile Include="Objects\Blocks\Stair.cs" />
     <Compile Include="BaseClasses\Controls\BaseCommand.cs" />
     <Compile Include="Controls\Commands\Action.cs" />
     <Compile Include="Controls\Commands\FireCreate.cs" />
@@ -125,34 +125,34 @@
     <Compile Include="Controls\Commands\ToggleFullScreen.cs" />
     <Compile Include="Containers\Session.cs" />
     <Compile Include="Controls\Controllers\KeyboardController.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
-    <Compile Include="EnemyObjects\Piranha.cs" />
-    <Compile Include="EnemyObjects\PiranhaStates\Defeated.cs" />
-    <Compile Include="EnemyObjects\PiranhaStates\Hidden.cs" />
-    <Compile Include="EnemyObjects\PiranhaStates\MovingDown.cs" />
-    <Compile Include="EnemyObjects\PiranhaStates\MovingUp.cs" />
-    <Compile Include="EnemyObjects\PiranhaStates\Show.cs" />
+    <Compile Include="Objects\Enemies\KoopaStates\MovingShell.cs" />
+    <Compile Include="Objects\Enemies\Piranha.cs" />
+    <Compile Include="Objects\Enemies\PiranhaStates\Defeated.cs" />
+    <Compile Include="Objects\Enemies\PiranhaStates\Hidden.cs" />
+    <Compile Include="Objects\Enemies\PiranhaStates\MovingDown.cs" />
+    <Compile Include="Objects\Enemies\PiranhaStates\MovingUp.cs" />
+    <Compile Include="Objects\Enemies\PiranhaStates\Show.cs" />
     <Compile Include="Factories\GameObjectFactory.cs" />
     <Compile Include="Factories\CommandFactory.cs" />
     <Compile Include="Controls\Commands\InfiniteMode.cs" />
     <Compile Include="Controls\Commands\NormalMode.cs" />
     <Compile Include="Factories\SoundFactory.cs" />
     <Compile Include="Factories\SpriteFactory.cs" />
-    <Compile Include="EnemyObjects\Goomba.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
+    <Compile Include="Objects\Enemies\Goomba.cs" />
+    <Compile Include="Objects\Enemies\GoombaStates\Defeated.cs" />
+    <Compile Include="Objects\Enemies\GoombaStates\Normal.cs" />
     <Compile Include="Interfaces\ICamera.cs" />
     <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Interfaces\ILevelGenerator.cs" />
     <Compile Include="Interfaces\Objects\IObject.cs" />
     <Compile Include="LevelGen\InfiniteGenerator.cs" />
     <Compile Include="LevelGen\PerlinNoiseGenerator.cs" />
-    <Compile Include="MiscObjects\Camera.cs" />
+    <Compile Include="Objects\Miscs\Camera.cs" />
     <Compile Include="Controls\Scripts\StartScript.cs" />
     <Compile Include="Theming\Player.cs" />
-    <Compile Include="UIObjects\GameWon.cs" />
-    <Compile Include="UIObjects\GameStart.cs" />
-    <Compile Include="UIObjects\GameOver.cs" />
+    <Compile Include="Objects\UserInterfaces\GameWon.cs" />
+    <Compile Include="Objects\UserInterfaces\GameStart.cs" />
+    <Compile Include="Objects\UserInterfaces\GameOver.cs" />
     <Compile Include="Interfaces\Containers\IContainer.cs" />
     <Compile Include="Interfaces\Containers\IGameSession.cs" />
     <Compile Include="Interfaces\Factories\ICommandFactory.cs" />
@@ -172,29 +172,29 @@
     <Compile Include="Interfaces\Objects\States\IKoopaState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\Factories\ISpriteFactory.cs" />
-    <Compile Include="ItemObjects\Coin.cs" />
-    <Compile Include="ItemObjects\CoinStates\Normal.cs" />
-    <Compile Include="ItemObjects\CoinStates\Unveil.cs" />
-    <Compile Include="ItemObjects\FireFlower.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Normal.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\Unveil.cs" />
-    <Compile Include="ItemObjects\OneUpMushroom.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\Normal.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\Unveil.cs" />
-    <Compile Include="ItemObjects\Star.cs" />
-    <Compile Include="ItemObjects\StarStates\Normal.cs" />
-    <Compile Include="ItemObjects\StarStates\Unveil.cs" />
-    <Compile Include="ItemObjects\SuperMushroom.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\Normal.cs" />
-    <Compile Include="EnemyObjects\Koopa.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\Defeated.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\Unveil.cs" />
+    <Compile Include="Objects\Items\Coin.cs" />
+    <Compile Include="Objects\Items\CoinStates\Normal.cs" />
+    <Compile Include="Objects\Items\CoinStates\Unveil.cs" />
+    <Compile Include="Objects\Items\FireFlower.cs" />
+    <Compile Include="Objects\Items\FireFlowerStates\Normal.cs" />
+    <Compile Include="Objects\Items\FireFlowerStates\Unveil.cs" />
+    <Compile Include="Objects\Items\OneUpMushroom.cs" />
+    <Compile Include="Objects\Items\OneUpMushroomStates\Normal.cs" />
+    <Compile Include="Objects\Items\OneUpMushroomStates\Unveil.cs" />
+    <Compile Include="Objects\Items\Star.cs" />
+    <Compile Include="Objects\Items\StarStates\Normal.cs" />
+    <Compile Include="Objects\Items\StarStates\Unveil.cs" />
+    <Compile Include="Objects\Items\SuperMushroom.cs" />
+    <Compile Include="Objects\Items\SuperMushroomStates\Normal.cs" />
+    <Compile Include="Objects\Enemies\Koopa.cs" />
+    <Compile Include="Objects\Enemies\KoopaStates\Defeated.cs" />
+    <Compile Include="Objects\Enemies\KoopaStates\Normal.cs" />
+    <Compile Include="Objects\Items\SuperMushroomStates\Unveil.cs" />
     <Compile Include="LevelGen\GameEntityConverter.cs" />
     <Compile Include="LevelGen\Util.cs" />
-    <Compile Include="ItemObjects\FireBall.cs" />
-    <Compile Include="MarioObjects\MarioCharacter.cs" />
-    <Compile Include="MiscObjects\Background.cs" />
+    <Compile Include="Objects\Items\FireBall.cs" />
+    <Compile Include="Objects\Characters\MarioCharacter.cs" />
+    <Compile Include="Objects\Miscs\Background.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -208,26 +208,26 @@
     <Compile Include="Interfaces\Objects\States\IMarioProtectionState.cs" />
     <Compile Include="Interfaces\Objects\States\IMarioMovementState.cs" />
     <Compile Include="Interfaces\Objects\States\IMarioPowerUpState.cs" />
-    <Compile Include="MarioObjects\ProtectionStates\Dead.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\Fire.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\Standard.cs" />
+    <Compile Include="Objects\Characters\ProtectionStates\Dead.cs" />
+    <Compile Include="Objects\Characters\PowerUpStates\Fire.cs" />
+    <Compile Include="Objects\Characters\PowerUpStates\Standard.cs" />
     <Compile Include="BaseClasses\Graphics\BaseTextureSprite.cs" />
-    <Compile Include="MarioObjects\ProtectionStates\Normal.cs" />
-    <Compile Include="MarioObjects\ProtectionStates\Protected.cs" />
-    <Compile Include="MarioObjects\ProtectionStates\Starred.cs" />
+    <Compile Include="Objects\Characters\ProtectionStates\Normal.cs" />
+    <Compile Include="Objects\Characters\ProtectionStates\Protected.cs" />
+    <Compile Include="Objects\Characters\ProtectionStates\Starred.cs" />
     <Compile Include="Sounds\SoundController.cs" />
-    <Compile Include="UIObjects\PopingUpPoints.cs" />
+    <Compile Include="Objects\UserInterfaces\PopingUpPoints.cs" />
     <Compile Include="Graphics\Sprites\SplashSprite.cs" />
     <Compile Include="Graphics\Sprites\TextSprite.cs" />
     <Compile Include="Graphics\Sprites\FlashingAnimatedSprite.cs" />
     <Compile Include="Graphics\Sprites\FlickingAnimatedSprite.cs" />
     <Compile Include="Graphics\Sprites\BrickPieceSprite.cs" />
-    <Compile Include="MarioObjects\Mario.cs" />
-    <Compile Include="MarioObjects\MovementStates\Crouching.cs" />
-    <Compile Include="MarioObjects\MovementStates\Standing.cs" />
-    <Compile Include="MarioObjects\MovementStates\Jumping.cs" />
-    <Compile Include="MarioObjects\MovementStates\Walking.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\Super.cs" />
+    <Compile Include="Objects\Characters\Mario.cs" />
+    <Compile Include="Objects\Characters\MovementStates\Crouching.cs" />
+    <Compile Include="Objects\Characters\MovementStates\Standing.cs" />
+    <Compile Include="Objects\Characters\MovementStates\Jumping.cs" />
+    <Compile Include="Objects\Characters\MovementStates\Walking.cs" />
+    <Compile Include="Objects\Characters\PowerUpStates\Super.cs" />
     <Compile Include="Graphics\Sprites\AnimatedSprite.cs" />
     <Compile Include="Graphics\Sprites\StaticSprite.cs" />
     <Compile Include="Theming\Const.cs" />
@@ -241,7 +241,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UIObjects\HUD.cs" />
+    <Compile Include="Objects\UserInterfaces\HUD.cs" />
     <Compile Include="Theming\Listener.cs" />
   </ItemGroup>
   <ItemGroup>
