--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -84,6 +84,7 @@
     <Compile Include="BaseClasses\Objects\BaseUIObject.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseTimedState.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseState.cs" />
+    <Compile Include="Sounds\SoundEffect.cs" />
     <Compile Include="Interfaces\Sounds\ISoundEffect.cs" />
     <Compile Include="Objects\Blocks\Brick.cs" />
     <Compile Include="Objects\Blocks\BrickStates\Bumped.cs" />
