Rename SoundController as SoundManager.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -221,7 +221,7 @@
     <Compile Include="Objects\Characters\ProtectionStates\Normal.cs" />
     <Compile Include="Objects\Characters\ProtectionStates\Protected.cs" />
     <Compile Include="Objects\Characters\ProtectionStates\Starred.cs" />
-    <Compile Include="Sounds\SoundController.cs" />
+    <Compile Include="Sounds\SoundManager.cs" />
     <Compile Include="Objects\UserInterfaces\PopingUpPoints.cs" />
     <Compile Include="Graphics\Sprites\SplashSprite.cs" />
     <Compile Include="Graphics\Sprites\TextSprite.cs" />
