--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -348,6 +348,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="Content\Font\text.spritefont" />
     <None Include="Content\Infinite.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
