--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -255,7 +255,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\UserInterfaces\HUD.cs" />
-    <Compile Include="Theming\Listener.cs" />
+    <Compile Include="Theming\ScoreListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -349,6 +349,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="Content\Font\text.spritefont" />
     <None Include="Content\Infinite.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
