Updated with screen manager.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Objects\Enemies\ThwompStates\MovingDown.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
     <Compile Include="Objects\UserInterfaces\GamePause.cs" />
+    <Compile Include="Objects\UserInterfaces\ScreenManager.cs" />
     <Compile Include="Sounds\SoundEffectListener.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Objects\Enemies\Thwomp.cs" />
