--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -159,7 +159,7 @@
     <Compile Include="Objects\Enemies\GoombaStates\Normal.cs" />
     <Compile Include="Interfaces\Objects\ICamera.cs" />
     <Compile Include="Interfaces\IListener.cs" />
-    <Compile Include="Interfaces\LevelGen\ILevelGenerator.cs" />
+    <Compile Include="Interfaces\LevelGen\IGenerator.cs" />
     <Compile Include="Interfaces\Objects\IObject.cs" />
     <Compile Include="LevelGen\NoiseGenerators\PerlinNoiseGenerator.cs" />
     <Compile Include="Objects\Miscs\Camera.cs" />
