--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -84,6 +84,9 @@
     <Compile Include="BaseClasses\Objects\BaseUIObject.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseTimedState.cs" />
     <Compile Include="BaseClasses\Objects\States\BaseState.cs" />
+    <Compile Include="Controls\Commands\CursorDown.cs" />
+    <Compile Include="Controls\Commands\CursorUp.cs" />
+    <Compile Include="Controls\Commands\Select.cs" />
     <Compile Include="NoiseGame.cs" />
     <Compile Include="Interfaces\ISoundable.cs" />
     <Compile Include="LevelGen\NoiseGenerators\NoiseInterpreter.cs" />
@@ -92,7 +95,7 @@
     <Compile Include="Objects\Enemies\ThwompStates\MovingDown.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
     <Compile Include="Objects\UserInterfaces\GamePause.cs" />
-    <Compile Include="Objects\UserInterfaces\ScreenManager.cs" />
+    <Compile Include="Objects\UserInterfaces\UIManager.cs" />
     <Compile Include="Sounds\SoundEffectListener.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Objects\Enemies\Thwomp.cs" />
@@ -120,10 +123,10 @@
     <Compile Include="BaseClasses\Controls\BaseCommand.cs" />
     <Compile Include="Controls\Commands\Action.cs" />
     <Compile Include="Controls\Commands\FireCreate.cs" />
-    <Compile Include="Controls\Commands\Mute.cs" />
+    <Compile Include="Controls\Commands\ToggleMute.cs" />
     <Compile Include="Controls\Commands\NormalCreate.cs" />
     <Compile Include="Controls\Commands\Resume.cs" />
-    <Compile Include="Controls\Commands\Quit.cs" />
+    <Compile Include="Controls\Commands\Exit.cs" />
     <Compile Include="Controls\Commands\Reset.cs" />
     <Compile Include="Controls\Commands\RightPress.cs" />
     <Compile Include="Controls\Commands\LeftPress.cs" />
@@ -166,6 +169,7 @@
     <Compile Include="LevelGen\NoiseGenerators\PerlinNoiseGenerator.cs" />
     <Compile Include="Objects\Miscs\Camera.cs" />
     <Compile Include="Controls\Scripts\StartScript.cs" />
+    <Compile Include="Theming\GraphicsManager.cs" />
     <Compile Include="Theming\Player.cs" />
     <Compile Include="Objects\UserInterfaces\GameWon.cs" />
     <Compile Include="Objects\UserInterfaces\GameStart.cs" />
@@ -260,6 +264,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\UserInterfaces\HUD.cs" />
     <Compile Include="Theming\ScoreListener.cs" />
+    <Compile Include="Theming\SoundManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
