--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -97,13 +97,13 @@
     <Compile Include="Objects\Enemies\ThwompStates\MovingUp.cs" />
     <Compile Include="Objects\UserInterfaces\GamePause.cs" />
     <Compile Include="Objects\UserInterfaces\UIManager.cs" />
-    <Compile Include="Sounds\SoundEffectListener.cs" />
+    <Compile Include="Sounds\Effects\SoundEffectListener.cs" />
     <Compile Include="Interfaces\Objects\States\IThwompState.cs" />
     <Compile Include="Objects\Enemies\Thwomp.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\Defeated.cs" />
     <Compile Include="Objects\Enemies\ThwompStates\Normal.cs" />
-    <Compile Include="Sounds\SoundTrack.cs" />
-    <Compile Include="Sounds\SoundEffect.cs" />
+    <Compile Include="Sounds\Tracks\SoundTrack.cs" />
+    <Compile Include="Sounds\Effects\SoundEffect.cs" />
     <Compile Include="Interfaces\Sounds\ISoundTrack.cs" />
     <Compile Include="Interfaces\Sounds\ISoundEffect.cs" />
     <Compile Include="Objects\Blocks\Brick.cs" />
@@ -235,7 +235,7 @@
     <Compile Include="Objects\Characters\ProtectionStates\Normal.cs" />
     <Compile Include="Objects\Characters\ProtectionStates\Protected.cs" />
     <Compile Include="Objects\Characters\ProtectionStates\Starred.cs" />
-    <Compile Include="Sounds\BGMManager.cs" />
+    <Compile Include="Sounds\Tracks\SoundTrackManager.cs" />
     <Compile Include="Objects\UserInterfaces\PopingUpPoints.cs" />
     <Compile Include="Graphics\Sprites\SplashSprite.cs" />
     <Compile Include="Graphics\Sprites\TextSprite.cs" />
