--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -164,7 +164,7 @@
     <Compile Include="Interfaces\Objects\ICamera.cs" />
     <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Interfaces\LevelGen\IGenerator.cs" />
-    <Compile Include="Interfaces\Objects\IObject.cs" />
+    <Compile Include="Interfaces\Objects\IUIObject.cs" />
     <Compile Include="LevelGen\NoiseGenerators\PerlinNoiseGenerator.cs" />
     <Compile Include="Objects\Miscs\Camera.cs" />
     <Compile Include="Controls\Scripts\StartScript.cs" />
