Added 'O' death command

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -86,6 +86,7 @@
     <Compile Include="BaseClasses\Objects\States\BaseState.cs" />
     <Compile Include="Controls\Commands\CursorDown.cs" />
     <Compile Include="Controls\Commands\CursorUp.cs" />
+    <Compile Include="Controls\Commands\KillMario.cs" />
     <Compile Include="Controls\Commands\Select.cs" />
     <Compile Include="LevelGen\Scroll.cs" />
     <Compile Include="NoiseGame.cs" />
